--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,70 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/mRecyclerView"
-        android:layout_width="412dp"
-        android:layout_height="635dp"
-        android:layout_marginTop="50dp"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <EditText
+                    android:id="@+id/ET_CarBrand"
+                    android:layout_width="142dp"
+                    android:layout_height="78dp"
+                    android:layout_marginStart="4dp"
+                    android:ems="10"
+                    android:inputType="textPersonName"
+                    android:text="CarName"
+                    android:textSize="14sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <Button
+                    android:id="@+id/btn_add"
+                    android:layout_width="67dp"
+                    android:layout_height="71dp"
+                    android:layout_marginEnd="16dp"
+                    android:text="Add"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@+id/ET_CarHP" />
+
+                <EditText
+                    android:id="@+id/ET_CarHP"
+                    android:layout_width="154dp"
+                    android:layout_height="78dp"
+                    android:layout_marginStart="16dp"
+                    android:ems="10"
+                    android:hint="1"
+                    android:inputType="number"
+                    app:layout_constraintBottom_toBottomOf="@+id/ET_CarBrand"
+                    app:layout_constraintStart_toEndOf="@+id/ET_CarBrand"
+                    app:layout_constraintTop_toTopOf="@+id/ET_CarBrand"
+                    app:layout_constraintVertical_bias="1.0" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/mRecyclerView"
+                    android:layout_width="412dp"
+                    android:layout_height="531dp"
+                    app:layout_constraintTop_toBottomOf="@+id/ET_CarHP"
+                    tools:layout_editor_absoluteX="-1dp">
+
+                </androidx.recyclerview.widget.RecyclerView>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </LinearLayout>
+
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
